[package]
name = "ws-relay"
version = "0.1.0"
edition = "2021"
authors = ["Jean Schmitt <github@jeanschmitt.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
futures-util = "0.3"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
rand = "0.9.1"
bytes = "1.10.1"
warp = "0.3.7"
thiserror = "2.0.12"
hex = "0.4.3"
